Require Java 17
Updates plugin to LTS that requires Java 17. Applied using
OpenRewrite Java11to17 plugin which updates to use instanceof
pattern matching instead of casting.